# project2_Dorozhkin_Ivan_M25-555

./: .gitignore  README.md  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
