[project]
name = "project2-dorozhkin-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "ivan dorozhkin",email = "dorozhkinIvanK@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.17.0,<4.0.0)"
]

[tool.poetry]

packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]
